--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "framer-motion": "^12.4.4",
+    "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "react-tilt": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
