--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.8.1",
     "react-tilt": "^1.0.2"
