--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.8.1",
-    "react-tilt": "^1.0.2"
+    "react-tilt": "^1.0.2",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
