--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.4.4",
     "lottie-react": "^2.4.1",
     "react": "^18.2.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
