--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.1",
     "framer-motion": "^12.4.4",
     "lottie-react": "^2.4.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.2.0",
