--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.8.0",
     "framer-motion": "^12.4.4",
     "lottie-react": "^2.4.1",
     "moment": "^2.30.1",
