crud operation has done for crop

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
-MONGO_URI = mongodb://SGAWSDIGAPDEV01:8888/harvest-hub
+# connect db from dev server using zscalar/home
+MONGO_URI = mongodb://SGAWSDIGAPDEV01.seatrium.com:8888/harvest-hub
+# MONGO_URI = mongodb://SGAWSDIGAPDEV01:8888/harvest-hub
 APP_PORT = 7777
