--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongodb": "^6.13.1",
     "mongoose": "^8.10.2",
-    "nodemon": "^3.1.9",
-    "whatwg-url": "^14.1.1"
+    "nodemon": "^3.1.9"
   },
   "scripts": {
-    "start": "nodemon ./server.js",
+    "start": "node ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
