--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "nodemon": "^3.1.9"
   },
   "scripts": {
-    "start": "node ./server.js",
+    "start": "nodemon ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
