--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-VITE_SERVER_BASE_URL = https://harvest-hub-server-omega.vercel.app/harvest-hub/
+VITE_SERVER_BASE_URL = http://localhost:7777/harvest-hub/
