--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
-# connect mongodb atlas free hosting string
-MONGO_URI = mongodb+srv://harish:731614114045Ha%40@harvest-hub-cluster.slsg4.mongodb.net/?retryWrites=true&w=majority&appName=harvest-hub-cluster
+MONGO_URI = mongodb://SGAWSDIGAPDEV01:8888/harvest-hub
+# connect db from dev server using zscalar/home
+# MONGO_URI = mongodb://SGAWSDIGAPDEV01.seatrium.com:8888/harvest-hub
 APP_PORT = 7777
