--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,7 @@
 # connect db from dev server using zscalar/home
 MONGO_URI = mongodb://SGAWSDIGAPDEV01.seatrium.com:8888/harvest-hub
 APP_PORT = 7777
+# openweathermap api key
+OPEN_WEATHER_MAP_API_KEY = 35d3e80081ebea21e02cc26fcbec8c89
+LATITUDE = 11.052438
+LONGITUDE = 78.574391
