--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,13 @@
 # MONGO_URI = mongodb://SGAWSDIGAPDEV01:8888/harvest-hub
 # connect db from dev server using zscalar/home
-MONGO_URI = mongodb://SGAWSDIGAPDEV01.seatrium.com:8888/harvest-hub
+# MONGO_URI = mongodb://SGAWSDIGAPDEV01.seatrium.com:8888/harvest-hub
 # connect mongodb atlas free hosting string
-# MONGO_URI = mongodb+srv://harish:731614114045Ha%40@harvest-hub-cluster.slsg4.mongodb.net/?retryWrites=true&w=majority&appName=harvest-hub-cluster
+MONGO_URI = mongodb+srv://harish:731614114045Ha%40@harvest-hub-cluster.slsg4.mongodb.net/?retryWrites=true&w=majority&appName=harvest-hub-cluster
 APP_PORT = 7777
 # openweathermap api key
 OPEN_WEATHER_MAP_API_KEY = 35d3e80081ebea21e02cc26fcbec8c89
 LATITUDE = 11.052438
 LONGITUDE = 78.574391
+
+#hugging face token
+HUGGING_FACE_TOKEN = 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
