--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "server of the harvest hub app",
   "dependencies": {
+    "@huggingface/inference": "^3.5.1",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
